--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "foreman": "^2.0.0",
     "immutable": "^3.8.1",
     "minimist": "^1.2.0",
+    "plotly": "^1.0.6",
     "tsc": "^1.20150623.0",
     "typescript": "^2.4.2"
   },
